# limpid_project

./: README.md
android-code/: README.md
dashboard-code/: README.md
dashboard-code/lmpd-dash/: .firebaserc  README.md  angular.json  app.js  firebase.json  karma.conf.js  package-lock.json  package.json
dashboard-code/lmpd-dash/src/: index.html  styles.css
dashboard-code/lmpd-dash/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts  ipma.service.spec.ts  ipma.service.ts  shared.service.ts
dashboard-code/lmpd-dash/src/app/wrapper/: weather.css  (+3 more)
dashboard-code/lmpd-dash/src/environments/: environment.prod.ts  environment.ts
esp-code/: README.md
esp-code/code/LMPD_varuna5/: CMakeLists.txt  sdkconfig
esp-code/code/LMPD_varuna5/main/: CMakeLists.txt  main.c
esp-code/code/LMPD_varuna5/main/LMPD_adc/: ADC_ads.c  ADC_ads.h
esp-code/code/LMPD_varuna5/main/LMPD_blt/: BLT_spp.c  BLT_spp.h
esp-code/code/LMPD_varuna5/main/LMPD_ch/: MSG_handler.c  MSG_handler.h
esp-code/code/LMPD_varuna5/main/LMPD_rom/: ROM_msd.c  ROM_msd.h
esp-code/code/LMPD_varuna5/main/LMPD_sen/: SEN_do.c  SEN_do.h  SEN_ds.c  SEN_ds.h  SEN_ph.c  SEN_ph.h  SEN_tds.c  SEN_tds.h  SEN_turb.c  SEN_turb.h
esp-code/code/LMPD_varuna5/main/LMPD_wpp/: WPP_handler.c  WPP_handler.h
pcb/: README.md
pcb/LMPD_pcb/: Battery_module.kicad_sch  SDcard_module.kicad_sch  VARUNA5.kicad_pcb  VARUNA5.kicad_prl  VARUNA5.kicad_pro  VARUNA5.kicad_sch
pcb/LMPD_pcb/Production/: panel_config.json
pcb/LMPD_pcb/bom/: ibom.html
pcb/LMPD_pcb/schematic_salvo/: VARUNA5.kicad_pro
(+21 files in other folders)
